src/main/java/com/jeta/forms/gui/common/parsers/FormSpecParser.java
/* Generated By:JavaCC: Do not edit this line. FormSpecParser.java */
package com.jeta.forms.gui.common.parsers;

public class FormSpecParser implements FormSpecParserConstants {
	public String m_alignment;
	public String m_size_type;
	public String m_constant_size = "10.0";
	public String m_constant_units = "PX";
	public String m_component_size;
	public String m_bounded_size;
	public String m_resize;
	public String m_resize_weight = "1.0";

	/**
	 * Invoke parse to start the parse operation
	 */
	final public void parse() throws ParseException {
		Token x = null;
		alignment();
		jj_consume_token(COLON);
		size();
		jj_consume_token(COLON);
		resize();
	}

	final public void alignment() throws ParseException {
		Token x = null;
		switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
		case 13:
		case 14:
			switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
			case 13:
				jj_consume_token(13);
				break;
			case 14:
				jj_consume_token(14);
				break;
			default:
				jj_la1[0] = jj_gen;
				jj_consume_token(-1);
				throw new ParseException();
			}
			m_alignment = "LEFT";
			break;
		case 15:
		case 16:
			switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
			case 15:
				jj_consume_token(15);
				break;
			case 16:
				jj_consume_token(16);
				break;
			default:
				jj_la1[1] = jj_gen;
				jj_consume_token(-1);
				throw new ParseException();
			}
			m_alignment = "CENTER";
			break;
		case 17:
		case 18:
			switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
			case 17:
				jj_consume_token(17);
				break;
			case 18:
				jj_consume_token(18);
				break;
			default:
				jj_la1[2] = jj_gen;
				jj_consume_token(-1);
				throw new ParseException();
			}
			m_alignment = "RIGHT";
			break;
		case 19:
		case 20:
			switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
			case 19:
				jj_consume_token(19);
				break;
			case 20:
				jj_consume_token(20);
				break;
			default:
				jj_la1[3] = jj_gen;
				jj_consume_token(-1);
				throw new ParseException();
			}
			m_alignment = "FILL";
			break;
		case 21:
		case 22:
			switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
			case 21:
				jj_consume_token(21);
				break;
			case 22:
				jj_consume_token(22);
				break;
			default:
				jj_la1[4] = jj_gen;
				jj_consume_token(-1);
				throw new ParseException();
			}
			m_alignment = "TOP";
			break;
		case 23:
		case 24:
			switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
			case 23:
				jj_consume_token(23);
				break;
			case 24:
				jj_consume_token(24);
				break;
			default:
				jj_la1[5] = jj_gen;
				jj_consume_token(-1);
				throw new ParseException();
			}
			m_alignment = "BOTTOM";
			break;
		default:
			jj_la1[6] = jj_gen;
			jj_consume_token(-1);
			throw new ParseException();
		}
	}

	final public String units() throws ParseException {
		Token x = null;
		switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
		case 25:
			jj_consume_token(25);
			{
				if (true)
					return "PX";
			}
			break;
		case 26:
			jj_consume_token(26);
			{
				if (true)
					return "PT";
			}
			break;
		case 27:
			jj_consume_token(27);
			{
				if (true)
					return "DLU";
			}
			break;
		case 28:
			jj_consume_token(28);
			{
				if (true)
					return "DLU";
			}
			break;
		case 29:
			jj_consume_token(29);
			{
				if (true)
					return "DLU";
			}
			break;
		case 30:
			jj_consume_token(30);
			{
				if (true)
					return "IN";
			}
			break;
		case 31:
			jj_consume_token(31);
			{
				if (true)
					return "MM";
			}
			break;
		case 32:
			jj_consume_token(32);
			{
				if (true)
					return "CM";
			}
			break;
		default:
			jj_la1[7] = jj_gen;
			jj_consume_token(-1);
			throw new ParseException();
		}
		throw new Error("Missing return statement in function");
	}

	final public void size() throws ParseException {
		Token x = null;
		switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
		case INTEGER_LITERAL:
		case FLOATING_POINT_LITERAL:
			constantSize();
			m_size_type = "CONSTANT";
			break;
		case 33:
		case 34:
		case 35:
		case 36:
		case 37:
		case 38:
			componentSize();
			m_size_type = "COMPONENT";
			break;
		case 39:
		case 40:
			boundedSize();
			m_size_type = "BOUNDED";
			break;
		default:
			jj_la1[8] = jj_gen;
			jj_consume_token(-1);
			throw new ParseException();
		}
	}

	final public void constantSize() throws ParseException {
		Token x = null;
		String size = "";
		String units = "";
		switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
		case INTEGER_LITERAL:
			x = jj_consume_token(INTEGER_LITERAL);
			break;
		case FLOATING_POINT_LITERAL:
			x = jj_consume_token(FLOATING_POINT_LITERAL);
			break;
		default:
			jj_la1[9] = jj_gen;
			jj_consume_token(-1);
			throw new ParseException();
		}
		size = x.image;
		units = units();
		m_constant_size = size;
		m_constant_units = units;
	}

	final public void componentSize() throws ParseException {
		Token x = null;
		switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
		case 33:
		case 34:
			switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
			case 33:
				jj_consume_token(33);
				break;
			case 34:
				jj_consume_token(34);
				break;
			default:
				jj_la1[10] = jj_gen;
				jj_consume_token(-1);
				throw new ParseException();
			}
			m_component_size = "MIN";
			break;
		case 35:
		case 36:
			switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
			case 35:
				jj_consume_token(35);
				break;
			case 36:
				jj_consume_token(36);
				break;
			default:
				jj_la1[11] = jj_gen;
				jj_consume_token(-1);
				throw new ParseException();
			}
			m_component_size = "PREF";
			break;
		case 37:
		case 38:
			switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
			case 37:
				jj_consume_token(37);
				break;
			case 38:
				jj_consume_token(38);
				break;
			default:
				jj_la1[12] = jj_gen;
				jj_consume_token(-1);
				throw new ParseException();
			}
			m_component_size = "DEFAULT";
			break;
		default:
			jj_la1[13] = jj_gen;
			jj_consume_token(-1);
			throw new ParseException();
		}
	}

	final public void boundedSize() throws ParseException {
		Token x = null;
		switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
		case 39:
			jj_consume_token(39);
			m_bounded_size = "MIN";
			break;
		case 40:
			jj_consume_token(40);
			m_bounded_size = "MAX";
			break;
		default:
			jj_la1[14] = jj_gen;
			jj_consume_token(-1);
			throw new ParseException();
		}
		switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
		case INTEGER_LITERAL:
		case FLOATING_POINT_LITERAL:
			constantSize();
			jj_consume_token(SEMICOLON);
			componentSize();
			break;
		case 33:
		case 34:
		case 35:
		case 36:
		case 37:
		case 38:
			componentSize();
			jj_consume_token(SEMICOLON);
			constantSize();
			break;
		default:
			jj_la1[15] = jj_gen;
			jj_consume_token(-1);
			throw new ParseException();
		}
		jj_consume_token(41);
	}

	final public void resize() throws ParseException {
		Token x = null;
		switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
		case 42:
		case 43:
			switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
			case 42:
				jj_consume_token(42);
				break;
			case 43:
				jj_consume_token(43);
				break;
			default:
				jj_la1[16] = jj_gen;
				jj_consume_token(-1);
				throw new ParseException();
			}
			m_resize = "NONE";
			break;
		case 44:
		case 45:
			switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
			case 44:
				jj_consume_token(44);
				break;
			case 45:
				jj_consume_token(45);
				break;
			default:
				jj_la1[17] = jj_gen;
				jj_consume_token(-1);
				throw new ParseException();
			}
			m_resize = "GROW";
			label_1: while (true) {
				switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
				case 46:
					;
					break;
				default:
					jj_la1[18] = jj_gen;
					break label_1;
				}
				jj_consume_token(46);
				x = jj_consume_token(FLOATING_POINT_LITERAL);
				m_resize_weight = x.image;
				jj_consume_token(41);
			}
			break;
		default:
			jj_la1[19] = jj_gen;
			jj_consume_token(-1);
			throw new ParseException();
		}
	}

	public FormSpecParserTokenManager token_source;
	SimpleCharStream jj_input_stream;
	public Token token, jj_nt;
	private int jj_ntk;
	private int jj_gen;
	final private int[] jj_la1 = new int[20];
	static private int[] jj_la1_0;
	static private int[] jj_la1_1;
	static {
		jj_la1_0();
		jj_la1_1();
	}

	private static void jj_la1_0() {
		jj_la1_0 = new int[] { 0x6000, 0x18000, 0x60000, 0x180000, 0x600000, 0x1800000, 0x1ffe000, 0xfe000000, 0x60, 0x60, 0x0, 0x0, 0x0, 0x0, 0x0, 0x60, 0x0,
				0x0, 0x0, 0x0, };
	}

	private static void jj_la1_1() {
		jj_la1_1 = new int[] { 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x1, 0x1fe, 0x0, 0x6, 0x18, 0x60, 0x7e, 0x180, 0x7e, 0xc00, 0x3000, 0x4000, 0x3c00, };
	}

	public FormSpecParser(java.io.InputStream stream) {
		jj_input_stream = new SimpleCharStream(stream, 1, 1);
		token_source = new FormSpecParserTokenManager(jj_input_stream);
		token = new Token();
		jj_ntk = -1;
		jj_gen = 0;
		for (int i = 0; i < 20; i++)
			jj_la1[i] = -1;
	}

	public void ReInit(java.io.InputStream stream) {
		jj_input_stream.ReInit(stream, 1, 1);
		token_source.ReInit(jj_input_stream);
		token = new Token();
		jj_ntk = -1;
		jj_gen = 0;
		for (int i = 0; i < 20; i++)
			jj_la1[i] = -1;
	}

	public FormSpecParser(java.io.Reader stream) {
		jj_input_stream = new SimpleCharStream(stream, 1, 1);
		token_source = new FormSpecParserTokenManager(jj_input_stream);
		token = new Token();
		jj_ntk = -1;
		jj_gen = 0;
		for (int i = 0; i < 20; i++)
			jj_la1[i] = -1;
	}

	public void ReInit(java.io.Reader stream) {
		jj_input_stream.ReInit(stream, 1, 1);
		token_source.ReInit(jj_input_stream);
		token = new Token();
		jj_ntk = -1;
		jj_gen = 0;
		for (int i = 0; i < 20; i++)
			jj_la1[i] = -1;
	}

	public FormSpecParser(FormSpecParserTokenManager tm) {
		token_source = tm;
		token = new Token();
		jj_ntk = -1;
		jj_gen = 0;
		for (int i = 0; i < 20; i++)
			jj_la1[i] = -1;
	}

	public void ReInit(FormSpecParserTokenManager tm) {
		token_source = tm;
		token = new Token();
		jj_ntk = -1;
		jj_gen = 0;
		for (int i = 0; i < 20; i++)
			jj_la1[i] = -1;
	}

	final private Token jj_consume_token(int kind) throws ParseException {
		Token oldToken;
		if ((oldToken = token).next != null)
			token = token.next;
		else
			token = token.next = token_source.getNextToken();
		jj_ntk = -1;
		if (token.kind == kind) {
			jj_gen++;
			return token;
		}
		token = oldToken;
		jj_kind = kind;
		throw generateParseException();
	}

	final public Token getNextToken() {
		if (token.next != null)
			token = token.next;
		else
			token = token.next = token_source.getNextToken();
		jj_ntk = -1;
		jj_gen++;
		return token;
	}

	final public Token getToken(int index) {
		Token t = token;
		for (int i = 0; i < index; i++) {
			if (t.next != null)
				t = t.next;
			else
				t = t.next = token_source.getNextToken();
		}
		return t;
	}

	final private int jj_ntk() {
		if ((jj_nt = token.next) == null)
			return (jj_ntk = (token.next = token_source.getNextToken()).kind);
		else
			return (jj_ntk = jj_nt.kind);
	}

	private java.util.Vector jj_expentries = new java.util.Vector();
	private int[] jj_expentry;
	private int jj_kind = -1;

	public ParseException generateParseException() {
		jj_expentries.removeAllElements();
		boolean[] la1tokens = new boolean[47];
		for (int i = 0; i < 47; i++) {
			la1tokens[i] = false;
		}
		if (jj_kind >= 0) {
			la1tokens[jj_kind] = true;
			jj_kind = -1;
		}
		for (int i = 0; i < 20; i++) {
			if (jj_la1[i] == jj_gen) {
				for (int j = 0; j < 32; j++) {
					if ((jj_la1_0[i] & (1 << j)) != 0) {
						la1tokens[j] = true;
					}
					if ((jj_la1_1[i] & (1 << j)) != 0) {
						la1tokens[32 + j] = true;
					}
				}
			}
		}
		for (int i = 0; i < 47; i++) {
			if (la1tokens[i]) {
				jj_expentry = new int[1];
				jj_expentry[0] = i;
				jj_expentries.addElement(jj_expentry);
			}
		}
		int[][] exptokseq = new int[jj_expentries.size()][];
		for (int i = 0; i < jj_expentries.size(); i++) {
			exptokseq[i] = (int[]) jj_expentries.elementAt(i);
		}
		return new ParseException(token, exptokseq, tokenImage);
	}

	final public void enable_tracing() {
	}

	final public void disable_tracing() {
	}

}
